--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,11 +7,21 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # Используем другой, более простой способ запуска buildozer
-      - name: Build with Buildozer
-        uses: docker://ghcr.io/kivy/buildozer:master
+      - name: Set up Python
+        uses: actions/setup-python@v5
         with:
-          args: android debug
+          python-version: '3.11'
+
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential libffi-dev python3-dev libssl-dev zlib1g-dev libncurses5-dev libncursesw5-dev libreadline-dev libsqlite3-dev tk-dev libgdbm-dev libc6-dev libbz2-dev
+          pip install --user --upgrade buildozer cython virtualenv
+
+      - name: Build with Buildozer
+        run: |
+          export PATH=$PATH:~/.local/bin
+          buildozer android debug
           
       - name: Upload APK
         uses: actions/upload-artifact@v4
